# opencode--skilled-agent-loops-with-spec-kit-memory

./: .gitattributes  .gitignore  .mcp.json  .rename-engine-disposable  .utcp_config.json  AGENTS.md  AGENTS_Barter  AGENTS_Barter.md  CONTRIBUTING.md  DEPLOYMENT.md  PUBLIC-RELEASE.md  PUBLIC_RELEASE.md  README.md  barter-framework-setup-handover.md  opencode.json  package-lock.json  package.json  streamB_report.txt  tui.json
.claude/: CLAUDE.md  mcp.json  settings.json  settings.local.json
.codex/: AGENTS.md  CODEX.md  README.md  config.toml  hooks.json  policy.json  settings.json
.devin/: config.json  hooks.v1.json
.gemini/: GEMINI.md  settings.json
.opencode/skills/system-rerank-sidecar/: README.md  SKILL.md  graph-metadata.json  pyproject.toml
.opencode/skills/system-rerank-sidecar/feature_catalog/: feature_catalog.md
.opencode/skills/system-rerank-sidecar/manual_testing_playbook/: manual_testing_playbook.md
.opencode/skills/system-rerank-sidecar/scripts/: doctor.sh  ensure_rerank_sidecar.py  install.sh  rerank_sidecar.py  sidecar_defaults.py  sidecar_ledger.py  start.sh  use-model.sh
.opencode/skills/system-rerank-sidecar/scripts/finetune/: README.md  __init__.py  eval_on_fixture.py  generate_triples.py  publish.py  strip_templates.py  train.py  verify_split.py
.opencode/skills/system-rerank-sidecar/scripts/finetune/tests/: test_strip_templates.py
.opencode/skills/system-rerank-sidecar/tests/: __init__.py  test_rerank_sidecar.py  test_sidecar_ledger.py
.opencode/skills/system-rerank-sidecar/tests/fixtures/: reaper-ledger-cases.json
(+141007 files in other folders)
