[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-rerank-sidecar"
version = "0.1.0"
description = "FastAPI sidecar for Qwen cross-encoder reranking"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "pytest==9.0.3",
    "sentence-transformers==5.4.1",
    "torch==2.12.0",
    "uvicorn[standard]==0.47.0",
]

[tool.setuptools]
py-modules = []
